--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "CLIENT_TOKEN": "MTIxOTA3MjQ2MzUzMTU0NDYxNg.GHQ0uv.DtVw6NxcPADJ387aq1tMhXY4UHWpAdXKbB-3m8",
+    "CLIENT_TOKEN": "TOKEN",
     "clientId": "1219072463531544616",
     "guildId": "1204010994490281994",
     "CHANNEL_WELCOME": "1204025220269084683",
